# turbo-linecount

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compare_testfiles.sh  create_testfiles.sh  linecount.cpp  linecount.h  linecount.vcxproj  main.cpp
build_vs2013/: linecount.vcxproj  turbo-linecount.sln  turbo_linecount.sln
build_vs2013/lc/: lc.vcxproj
build_vs2013/linecount/: linecount.vcxproj
build_vs2013/linecount_static/: linecount_static.vcxproj
build_vs2013/tlc/: tlc.vcxproj
build_vs2013/turbo_linecount/: turbo_linecount.vcxproj
build_vs2013/turbo_linecount_static/: turbo_linecount_static.vcxproj
src/: main.cpp  turbo_linecount.cpp  turbo_linecount.h
tests/: compare_testfiles.sh  create_testfiles.sh
